fix: fix z-index

--- a/src/shared/ui/components/alert/ui/styles.module.scss
+++ b/src/shared/ui/components/alert/ui/styles.module.scss
@@ -15,7 +15,7 @@
     position: fixed;
     top: -100%;
     left: 50%;
-    z-index: 500;
+    z-index: 11;
     transform: translate(-50%, -50%);
 
     animation: slide-in .7s ease-in-out forwards;
