--- a/src/shared/ui/components/modal/ui/styles.module.scss
+++ b/src/shared/ui/components/modal/ui/styles.module.scss
@@ -1,3 +1,5 @@
+@import 'shared/ui/styles';
+
 .modal {
     min-width: 350px;
     width: 90%;
@@ -10,7 +12,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 500;
+    z-index: 11;
     transform: translate(-50%, -50%);
     box-shadow: 0 2px 4px $color-black-medium;
   
