--- a/src/shared/ui/components/overlay/ui/styles.module.scss
+++ b/src/shared/ui/components/overlay/ui/styles.module.scss
@@ -7,6 +7,6 @@
     width: 100%;
     height: 100%;
     background-color: $color-black-medium;
-    z-index: 200;
+    z-index: 10;
 }
  
